@@ -1,1 +1,10 @@
 # HUCS-Cinema-Reservation-System
+
+Simple JavaFX program to book seats for a film.
+
+Has features like admin and club membership.
+
+# How to run
+
+In terminal,first type "javac --module-path 'PATH TO JAVAFX SDK ON YOUR COMPUTER' --add-modules javafx.controls,javafx.media Main.java" to compile.
+Then type "java --module-path 'PATH TO JAVAFX SDK ON YOUR COMPUTER' --add-modules javafx.controls,javafx.media Main" to run the program.
